Update .env-sample files and enhance README.md
Filled in missing environment variables in .env-sample files for backend and client. Added sections to the README.md on considerations for Apple Pay and provided a link to the detailed installation guide PDF.

--- a/client/.env-sample
+++ b/client/.env-sample
@@ -1,2 +1,12 @@
-REACT_APP_PK=<STRIPE PUBLIC KEY>
+REACT_APP_PK=pk_******
 REACT_APP_BASE_URL=http://localhost:8081
+
+REACT_APP_PROJECT_KEY=example-name-project
+REACT_APP_CTP_CLIENT_ID=********
+REACT_APP_CLIENT_SECRET=*******
+REACT_APP_SESSION_URL=https://api.us-central1.gcp.commercetools.com
+REACT_APP_AUTH_URL=https://auth.us-central1.gcp.commercetools.com
+REACT_APP_ENABLER_BUILD_URL=http://localhost:3000/connector-enabler.es.js
+REACT_APP_PROCESOR_URL=http://localhost:8080
+
+REACT_APP_MODE=dev
