Add support for checkout via order page and connector
Implemented new components `CheckoutOrderPage` and `CheckoutOrderConnector` to handle separate checkout flows. Updated routes, context logic, and environment variables to support page-based and connector-based order creation. Simplified and reorganized components for better clarity and maintainability.

--- a/client/.env-sample
+++ b/client/.env-sample
@@ -7,6 +7,8 @@ REACT_APP_CLIENT_SECRET=*******
 REACT_APP_SESSION_URL=https://api.us-central1.gcp.commercetools.com
 REACT_APP_AUTH_URL=https://auth.us-central1.gcp.commercetools.com
 REACT_APP_ENABLER_BUILD_URL=http://localhost:3000/connector-enabler.es.js
-REACT_APP_PROCESOR_URL=http://localhost:8080
+REACT_APP_ENABLER_BUILD_ORDER_CONNECTOR_URL=http://localhost:3000/connector-enabler.es.js //Enabler with the order creation from the connector
+REACT_APP_PROCESOR_URL=http://localhost:8080 //Order created from page
+REACT_APP_PROCESOR_ORDER_CONNECTOR_URL=http://localhost:8080 //Order created from connector
 
 REACT_APP_MODE=dev
