--- a/client/.env-sample
+++ b/client/.env-sample
@@ -6,9 +6,17 @@ REACT_APP_CTP_CLIENT_ID=********
 REACT_APP_CLIENT_SECRET=*******
 REACT_APP_SESSION_URL=https://api.us-central1.gcp.commercetools.com
 REACT_APP_AUTH_URL=https://auth.us-central1.gcp.commercetools.com
+
+# Composable connector with order creation from web page.
 REACT_APP_ENABLER_BUILD_URL=http://localhost:3000/connector-enabler.es.js
-REACT_APP_ENABLER_BUILD_ORDER_CONNECTOR_URL=http://localhost:3000/connector-enabler.es.js //Enabler with the order creation from the connector
 REACT_APP_PROCESOR_URL=http://localhost:8080 //Order created from page
+
+# Composable connector with order creation from connector
+REACT_APP_ENABLER_BUILD_ORDER_CONNECTOR_URL=http://localhost:3000/connector-enabler.es.js //Enabler with the order creation from the connector
 REACT_APP_PROCESOR_ORDER_CONNECTOR_URL=http://localhost:8080 //Order created from connector
+
+# Checkout connector with commercetools checkout.
+REACT_APP_ENABLER_BUILD_CHECKOUT_CONNECTOR_URL=http://localhost:3000/connector-enabler.es.js //Checkout connector URL
+REACT_APP_PROCESOR_CHECKOUT_CONNECTOR_URL=http://localhost:8080 //Order created from connector
 
 REACT_APP_MODE=dev
