--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-number-format": "^4.5.5",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "react-switch-selector": "^2.3.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
