--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "dependencies": {
     "@commercetools/api-request-builder": "^5.6.3",
+    "@commercetools/checkout-browser-sdk": "^0.9.0",
     "@commercetools/sdk-client": "^2.1.2",
     "@commercetools/sdk-middleware-auth": "^6.2.0",
     "@commercetools/sdk-middleware-http": "^6.1.0",
