--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
   "scripts": {
     "start": "node Server.js",
     "local": "react-scripts start",
-    "build": "cd client;npm install;react-scripts build;cd ..",
+    "build": "cd client && npm install && npm run build",
+    "vercel-build": "npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "format": "npx prettier --write ."
