Add dependencies for Express, CORS, Stripe, and CommerceTools in package.json; update Vercel configuration to include API files

--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,10 @@
   "builds": [
     {
       "src": "client/api/index.js",
-      "use": "@vercel/node"
+      "use": "@vercel/node",
+      "config": {
+        "includeFiles": ["client/api/**"]
+      }
     },
     {
       "src": "client/build/**",
