Refactor various components and update configurations: clean up code, adjust ESLint rules, and enhance environment variables for better clarity and functionality

--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.54.0",
@@ -33,7 +34,8 @@
       "react-app/jest"
     ],
     "rules": {
-      "no-unused-vars": "warn"
+      "react-hooks/exhaustive-deps": "off",
+      "jsx-a11y/alt-text": "off"
     }
   },
   "browserslist": {
