--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "start": "node Server.js",
     "local": "react-scripts start",
     "build": "cd client && npm install && npm run build",
-    "vercel-build": "npm run build",
+    "vercel-build": "CI=false npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "format": "npx prettier --write ."
@@ -49,7 +49,6 @@
       "react-app/jest"
     ],
     "rules": {
-      "no-unused-vars": "off",
       "react-hooks/exhaustive-deps": "off",
       "jsx-a11y/alt-text": "off"
     }
