--- a/client/.env-sample
+++ b/client/.env-sample
@@ -1,11 +1,11 @@
 REACT_APP_PK=pk_******
 REACT_APP_BASE_URL=http://localhost:8081
 
-REACT_APP_PROJECT_KEY=example-name-project
-REACT_APP_CTP_CLIENT_ID=********
-REACT_APP_CLIENT_SECRET=*******
+REACT_APP_CT_PROJECT_KEY=example-name-project
+REACT_APP_CT_CLIENT_ID=********
+REACT_APP_CT_SECRET=*******
 REACT_APP_SESSION_URL=https://api.us-central1.gcp.commercetools.com
-REACT_APP_AUTH_URL=https://auth.us-central1.gcp.commercetools.com
+REACT_APP_CT_AUTH_URL=https://auth.us-central1.gcp.commercetools.com
 
 # Composable connector with order creation from web page.
 REACT_APP_ENABLER_BUILD_URL=http://localhost:3000/connector-enabler.es.js
