Add catch-all route in vercel.json to redirect all requests to index.html

--- a/vercel.json
+++ b/vercel.json
@@ -22,6 +22,10 @@
     {
       "source": "/(settings|products|customer|cart|create-checkout-session|session|create-payment-intent|create-order|capture-payment|cancel-payment|request-refund|payment-intent|charge|events|confirm)(.*)",
       "destination": "/client/api/index.js"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
