--- a/vercel.json
+++ b/vercel.json
@@ -25,7 +25,7 @@
     },
     {
       "source": "/(.*)",
-      "destination": "/client/src/index.html"
+      "destination": "/index.html"
     }
   ]
 }
