--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "vercel-build": "CI=false npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "format": "npx prettier --write ."
+    "format": "npx prettier --write .",
+    "dev": "VERCEL_DEV_CACHE=0 vercel dev"
   },
   "eslintConfig": {
     "extends": [
