--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "start": "node Server.js",
     "local": "react-scripts start",
     "build": "cd client && npm install && npm run build",
-    "vercel-build": "CI=false npm run build",
+    "vercel-build": "run-script-os",
+    "vercel-build:darwin:linux": "CI=false npm run build",
+    "vercel-build:win32": "set CI=false npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "format": "npx prettier --write .",
@@ -68,6 +70,7 @@
   },
   "proxy": "http://localhost:8081",
   "devDependencies": {
-    "prettier": "2.8.4"
+    "prettier": "2.8.4",
+    "run-script-os": "^1.1.6"
   }
 }
