Feat: Fetching the available languages directly from commercetools project

--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "build": "cd client && npm install && npm run build",
     "vercel-build": "run-script-os",
     "vercel-build:darwin:linux": "CI=false npm run build",
-    "vercel-build:win32": "set CI=false npm run build",
+    "vercel-build:win32": "set CI=false&&npm run build",
+    "vercel-build:default": "CI=false npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "format": "npx prettier --write .",
