--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "homepage": "/",
   "dependencies": {
     "@commercetools/checkout-browser-sdk": "^0.20.0",
+    "@reduxjs/toolkit": "^2.8.2",
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.54.0",
     "@testing-library/jest-dom": "^5.16.2",
@@ -18,9 +19,11 @@
     "react-helmet": "^6.1.0",
     "react-jss": "^10.6.0",
     "react-number-format": "^4.5.5",
+    "react-redux": "^8.1.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-switch-selector": "^2.3.0",
+    "redux": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
