--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-country-region-selector": "^3.4.0",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-intl": "^7.1.11",
     "react-jss": "^10.6.0",
     "react-number-format": "^4.5.5",
     "react-redux": "^8.1.2",
