--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^8.1.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "react-scripts": "^5.0.1",
     "react-switch-selector": "^2.3.0",
     "redux": "^5.0.1",
     "web-vitals": "^2.1.4"
