--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,8 @@
   "homepage": "/",
   "dependencies": {
     "@commercetools/checkout-browser-sdk": "^0.20.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@reduxjs/toolkit": "^2.8.2",
     "@stripe/react-stripe-js": "^2.1.0",
