--- a/package.json
+++ b/package.json
@@ -36,13 +36,10 @@
     "start": "node Server.js",
     "local": "react-scripts start",
     "build": "run-script-os",
-    "build:darwin:linux": "cd client && npm install && npm run build",
-    "build:win32": "cd client&&npm install&&npm run build",
-    "build:default": "cd client && npm install && npm run build",
-    "vercel-build": "run-script-os",
-    "vercel-build:darwin:linux": "CI=false npm run build",
-    "vercel-build:win32": "set CI=false&&npm run build",
-    "vercel-build:default": "CI=false npm run build",
+    "build:darwin:linux": "npm install && npm run build",
+    "build:win32": "npm install&&npm run build",
+    "build:default": "npm install && npm run build",
+    "vercel-build": "CI=false npm run build --prefix client",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "format": "npx prettier --write .",
