--- a/vercel.json
+++ b/vercel.json
@@ -2,17 +2,17 @@
   "version": 2,
   "builds": [
     {
-      "src": "/api/index.js",
+      "src": "api/index.js",
       "use": "@vercel/node",
       "config": {
-        "includeFiles": ["/api/**/*.js"]
+        "includeFiles": ["api/**/*.js"]
       }
     },
     {
-      "src": "/client/package.json",
+      "src": "client/package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "/client/build"
+        "distDir": "client/build"
       }
     }
   ],
