--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
   "scripts": {
     "start": "node Server.js",
     "local": "react-scripts start",
-    "build": "cd client && npm install --legacy-peer-deps && cross-env CI=false npm run build",
-    "vercel-build": "cd client && npm install --legacy-peer-deps && cross-env CI=false npm run build",
+    "build": "npm install --prefix client --legacy-peer-deps && cross-env CI=false npm run build",
+    "vercel-build": "npm install --prefix client --legacy-peer-deps && cross-env CI=false npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "format": "npx prettier --write .",
