#1 - Chore: Unifying environment variables naming and samples

--- a/.env-sample
+++ b/.env-sample
@@ -1,9 +1,31 @@
-REACT_APP_SK=sk_*****
-REACT_APP_ADMIN=acct_****
-REACT_APP_PORT=8081
-REACT_APP_BASE_URL=http://localhost:8081
+# Environment variables for production environment
+
+# Shared keys
+## Authentication keys
 REACT_APP_CT_PROJECT_KEY=example-name-project
-REACT_APP_CT_CLIENT_ID=******
-REACT_APP_CT_SECRET=******
-REACT_APP_CT_API_URL=https://api.europe-west1.gcp.commercetools.com
-REACT_APP_CT_AUTH_URL=https://auth.europe-west1.gcp.commercetools.com
+REACT_APP_CT_CLIENT_ID=********
+REACT_APP_CT_SECRET=*******
+REACT_APP_SESSION_URL=https://api.us-central1.gcp.commercetools.com
+REACT_APP_CT_AUTH_URL=https://auth.us-central1.gcp.commercetools.com
+NODE_ENV=production
+
+# For the Client application
+REACT_APP_PK=pk_****
+REACT_APP_BASE_URL=http://localhost:8081
+REACT_APP_MODE=****
+## Composable connector with order creation from web page.
+REACT_APP_ENABLER_BUILD_URL=http://localhost:3000/connector-enabler.es.js
+REACT_APP_PROCESOR_URL=http://localhost:8080 //Order created from page
+## Composable connector with order creation from connector
+REACT_APP_ENABLER_BUILD_ORDER_CONNECTOR_URL=http://localhost:3000/connector-enabler.es.js //Enabler with the order creation from the connector
+REACT_APP_COMPOSABLE_CONNECTOR_PROCESSOR_URL=http://localhost:8080 //Order created from connector
+REACT_APP_COMPOSABLE_CONNECTOR_ENABLER_URL=****
+## Checkout connector with commercetools checkout.
+REACT_APP_ENABLER_BUILD_CHECKOUT_CONNECTOR_URL=http://localhost:3000/connector-enabler.es.js //Checkout connector URL
+REACT_APP_COMMERCETOOLS_CHECKOUT_CONNECTOR_PROCESSOR_URL=http://localhost:8080 //Order created from connector
+REACT_APP_COMMERCETOOLS_CHECKOUT_CONNECTOR_ENABLER_URL=****
+
+# For the API application
+## Stripe API
+STRIPE_KEY=sk_test_*****
+STRIPE_ADMIN=acct_*****
