--- a/client/.env-sample
+++ b/client/.env-sample
@@ -1,3 +1,4 @@
+# Development environment variables for the Client application
 REACT_APP_PK=pk_******
 REACT_APP_BASE_URL=http://localhost:8081
 
@@ -14,9 +15,12 @@ REACT_APP_PROCESOR_URL=http://localhost:8080 //Order created from page
 # Composable connector with order creation from connector
 REACT_APP_ENABLER_BUILD_ORDER_CONNECTOR_URL=http://localhost:3000/connector-enabler.es.js //Enabler with the order creation from the connector
 REACT_APP_COMPOSABLE_CONNECTOR_PROCESSOR_URL=http://localhost:8080 //Order created from connector
+REACT_APP_COMPOSABLE_CONNECTOR_ENABLER_URL=****
 
 # Checkout connector with commercetools checkout.
 REACT_APP_ENABLER_BUILD_CHECKOUT_CONNECTOR_URL=http://localhost:3000/connector-enabler.es.js //Checkout connector URL
 REACT_APP_COMMERCETOOLS_CHECKOUT_CONNECTOR_PROCESSOR_URL=http://localhost:8080 //Order created from connector
+REACT_APP_COMMERCETOOLS_CHECKOUT_CONNECTOR_ENABLER_URL=****
 
 REACT_APP_MODE=dev
+NODE_ENV=dev
